fix word-wrap

--- a/_sass/layout.sass
+++ b/_sass/layout.sass
@@ -10,20 +10,22 @@ body > header, body > footer
   flex-wrap: wrap
   justify-content: space-between
   align-items: center
-  nav
-    margin: .5em -1.3em
+  nav a
+    display: inline-block
 
 nav
-  margin: 1.5em 0
+  margin: .5em -1.3em
   a
-    display: inline-block
     margin: 0 1.3em
-  div
-    font-size: 1.1em
-    margin: .5em 0
   svg
     font-size: 1.1em
     vertical-align: sub
+
+main nav
+  font-size: 1.1em
+  margin: 1.4em 0
+  div
+    margin: .5em 0
 
 header h1
   font-size: 1.75em
